Header + Dupe link done - profile + dupe image

--- a/index.html
+++ b/index.html
@@ -4,7 +4,40 @@
     <head>
         <meta charset="UTF-8">
         <title>Kingston Landing Page</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
-    <body></body>
+    <body>
+
+        <div class="header">
+
+            <div class="top-bar">
+                <div class="logo">
+                    <strong>Khaya Kingston</strong>
+                </div>
+
+                <ul class="header-links">
+                    <li><a href="pages/duped.html">GitHub</a></li>
+                    <li><a href="pages/duped.html">LinkedIn</a></li>
+                    <li><a href="pages/duped.html">Something</a></li>
+                </ul>  
+            </div>
+
+            <div class="header-body">
+                <div class="header-text">
+                    <h1>Hi I'm Khaya!</h1>
+                    <div class="text-body"><p>This is an early iteration of what will go on 
+                        to be the landing page of my website. It will in theory go on to hold
+                        links to my GitHub as well as direct links to code and projects as I 
+                        generate them. Hopefully this works out. 
+                    </p></div>
+                    <button><a href="pages/duped.html"><strong>Sign Up</strong></a></button>
+                </div>
+                <img src="./logo.png" alt="Image Eventually">
+            </div>
+        </div>
+
+
+
+    </body>
 </html>
