Header and Project sections completed with working links to dupe page - images still needed

--- a/pages/duped.html
+++ b/pages/duped.html
@@ -12,7 +12,7 @@
 
         <p>Come back later it'll be up... probably... possibly.... prossibly...</p>
 
-        <img src="..images/duped-pic.jpg" alt="Mid State of Affairs">
+        <img src="../images/duped.JPG" alt="Mid State of Affairs">
     </body>
 
 </html>
