sign-up card section completed

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         links to my GitHub as well as direct links to code and projects as I 
                         generate them. Hopefully this works out. 
                     </p></div>
-                    <button><a href="pages/duped.html"><strong>Sign Up</strong></a></button>
+                    <button class="button"><a href="pages/duped.html"><strong>Sign Up</strong></a></button>
                 </div>
                 <div class="img-block">
                     <img src="images/profile..jpeg" alt="Image Eventually">
@@ -86,6 +86,19 @@
                 <div class="speaker"><p>-Random Guy, Road next to My House</p></div>
             </div>
 
+        </div>
+
+        <div class="card-section">
+            <div class="card">
+                <div class="action-call">
+                    <p style="margin: 0; font-size: 24px;">Call to Action! What for? Who Knows!</p>
+                    <p style="margin: 0; font-weight: lighter;">This was in the original template that I am trying to rebuild but I
+                        do not know what it would be for here. Regardless...
+                    </p>
+                </div>
+                <button class="button special"><a href="pages/duped.html"><strong>Sign Up</strong></a></button>
+            </div>
+            
         </div>
 
     </body>
