footer finished - everything but supplementary images completed

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <div class="quote-section">
                 <p style="font-size: 36px;">Unleash the symphony of your potential, conducting the melodies of ambition and the harmonies of ingenuity, 
                     as you compose the magnum opus of your existence, resonating through the corridors of eternity.</p>
-                <div class="speaker"><p>-Random Guy, Road next to My House</p></div>
+                <div class="speaker"><p>-Random Guy, Sidewalk next to Target</p></div>
             </div>
 
         </div>
@@ -99,6 +99,10 @@
                 <button class="button special"><a href="pages/duped.html"><strong>Sign Up</strong></a></button>
             </div>
             
+        </div>
+
+        <div class="footer">
+            <p style="font-size: 16px;">Original Page Design Inspiration &copy; The Odin Project 2023</p>
         </div>
 
     </body>
