connected etch a sketch project

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                 <h1 style="color: #1F2937; font: 36px; font-weight: bolder;">This is a Project Section:</h1>
                 <div class="project-block">
                     <div class="project-info">
-                        <a href="pages/duped.html" class="project-link">
+                        <a href="https://khaya-kingston.github.io/Etch-A-Sketch/" class="project-link">
                             <!--This will eventually hold actual images but for now just has the blocks from the template-->
-                            <div class="placeholder-blok"></div>
-                            <div class="text-body"><p>This is placeholder text for eventual project descriptions</p></div>
+                            <img src="./images/Etch-A-Sketch.png">
+                            <div class="text-body"><p>Etch-A-Sketch</p></div>
                         </a>
                     </div>
         
